[CSS] Refactor a series of ifs into a switch statement.

Bug: 921908
Change-Id: I8994b61e2a1fd0d165f426417b513718dcb7257a
Reviewed-on: https://chromium-review.googlesource.com/c/1414214
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: Fergal Daly <fergal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623159}
Former-commit-id: 9548726e0ee796ac2b5ec56bba2226aab7cff5f1